--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "eslint ",
     "lint:fix": "eslint 'src/**/*.{ts,tsx}' --fix",
-    "test": "NODE_ENV=test&vitest",
+    "test": "SET NODE_ENV=test&vitest run",
     "test:watch": "NODE_ENV=test&vitest --watch",
     "test:coverage": "NODE_ENV=test&vitest --coverage",
     "dev": "SET NODE_ENV=development& ts-node-dev --respawn --transpile-only src/index.ts",
